--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -18,6 +18,7 @@ importlib-metadata==4.11.3
 itsdangerous==2.1.2
 Jinja2==3.1.1
 kombu==5.2.4
+loguru==0.7.0
 MarkupSafe==2.1.1
 openai==0.27.2
 packaging==21.3
@@ -26,6 +27,7 @@ prometheus-client==0.14.1
 prompt-toolkit==3.0.29
 PyGithub==1.58.1
 pyparsing==3.0.8
+python-dotenv=1.0.0
 pytz==2022.1
 redis==4.2.2
 six==1.16.0
