--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -28,7 +28,7 @@ prometheus-client==0.14.1
 prompt-toolkit==3.0.29
 PyGithub==1.58.1
 pyparsing==3.0.8
-python-dotenv==1.0.0
+python-dotenv
 pytz==2022.1
 redis==4.2.2
 six==1.16.0
