--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ importlib-metadata==4.11.3
 itsdangerous==2.1.2
 Jinja2==3.1.1
 kombu==5.2.4
-langchain
+langchain==0.0.186
 loguru
 MarkupSafe==2.1.1
 openai==0.27.2
