--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ flower==1.0.0
 gunicorn==20.1.0
 humanize==4.0.0
 importlib-metadata==4.11.3
+ipdb
 itsdangerous==2.1.2
 Jinja2==3.1.1
 kombu==5.2.4
