docs: updated example env file

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,13 +1,24 @@
-ANTHROPIC_API_KEY=
-CELERY_BROKER_URL=
-GH_ACCESS_KEY=
-GH_ACCESS_TOKEN=
-GH_USERNAME=
-NEXT_PUBLIC_BACKEND_URL=
-NEXT_PUBLIC_GH_USERNAME=
-NEXT_PUBLIC_SUPABASE_ANON_KEY=
-NEXT_PUBLIC_SUPABASE_URL=
-OPENAI_API_KEY=
-POSTMARK_API_KEY=
-SUPABASE_ANON_KEY=
-SUPABASE_URL=
+# Get your Anthropic API key from https://console.anthropic.com/account/keys
+ANTHROPIC_API_KEY=sk-ant-api<your-anthropic-api-key>
+# Broker URL for Celery. This is just an example of what the format should look like. Can use Redis, RabbitMQ, etc.
+CELERY_BROKER_URL=pyamqp://guest@localhost//
+# Get your GitHub access token (classic) from https://github.com/settings/tokens
+GH_ACCESS_KEY=ghp_<your-github-access-token>
+GH_ACCESS_TOKEN=$GH_ACCESS_KEY
+# Change this to your own GitHub username if you want to use the GitHub API
+GH_USERNAME=matthew-mcateer
+# This backend URL works for local development, but you'll need to change it for production
+BACKEND_URL=http://localhost:8000
+# Get your OpenAI API key from https://platform.openai.com/account/api-keys
+OPENAI_API_KEY=sk-<your-openai-api-key>
+# Get your Postmark API key from https://account.postmarkapp.com/servers/<your-server-id>/credentials
+POSTMARK_API_KEY=<your-postmark-api-key>
+# Get your Supabase Anon key from https://supabase.com/dashboard/project/<your-project-id>/settings/api
+SUPABASE_ANON_KEY=<your-supabase-anon-key>
+# Can also be found at https://supabase.com/dashboard/project//settings/api
+SUPABASE_URL=https://<your-project-id>.supabase.co
+# Same as the above values but with NEXT_PUBLIC_ prepended for use in the frontend
+NEXT_PUBLIC_BACKEND_URL=$BACKEND_URL
+NEXT_PUBLIC_GH_USERNAME=$GH_USERNAME
+NEXT_PUBLIC_SUPABASE_ANON_KEY=$SUPABASE_ANON_KEY
+NEXT_PUBLIC_SUPABASE_URL=$SUPABASE_URL
