fix: updated backend and frontend to take in github username directly

--- a/api/.env.example
+++ b/api/.env.example
@@ -6,7 +6,7 @@ CELERY_BROKER_URL=pyamqp://guest@localhost//
 GH_ACCESS_KEY=ghp_<your-github-access-token>
 GH_ACCESS_TOKEN=$GH_ACCESS_KEY
 # Change this to your own GitHub username if you want to use the GitHub API
-GH_USERNAME=matthew-mcateer
+GITHUB_USERNAME=matthew-mcateer
 # This backend URL works for local development, but you'll need to change it for production
 BACKEND_URL=http://localhost:8000
 # Get your OpenAI API key from https://platform.openai.com/account/api-keys
@@ -19,6 +19,6 @@ SUPABASE_ANON_KEY=<your-supabase-anon-key>
 SUPABASE_URL=https://<your-project-id>.supabase.co
 # Same as the above values but with NEXT_PUBLIC_ prepended for use in the frontend
 NEXT_PUBLIC_BACKEND_URL=$BACKEND_URL
-NEXT_PUBLIC_GH_USERNAME=$GH_USERNAME
+NEXT_PUBLIC_GITHUB_USERNAME=$GITHUB_USERNAME
 NEXT_PUBLIC_SUPABASE_ANON_KEY=$SUPABASE_ANON_KEY
 NEXT_PUBLIC_SUPABASE_URL=$SUPABASE_URL
