--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.4",
     "@supabase/supabase-js": "^2.29.0",
-    "@types/node": "20.2.4",
+    "@types/node": "^20.2.4",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "^10.4.14",
