--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ FastAPI==0.95.2
 #itsdangerous==2.1.2
 #Jinja2==3.1.1
 #kombu==5.2.4
-#langchain==0.0.186
+langchain==0.0.186
 #loguru
 #MarkupSafe==2.1.1
 openai==0.27.2
